--- a/web/src/app/report/component/category-chart/category-chart.component.html
+++ b/web/src/app/report/component/category-chart/category-chart.component.html
@@ -20,8 +20,8 @@
     <mat-form-field>
       <mat-label>Group by</mat-label>
       <mat-select formControlName="groupBy">
-        <mat-option [value]="'week'">Week</mat-option>
-        <mat-option [value]="'month'">Month</mat-option>
+        <mat-option [value]="'expense'">Expense</mat-option>
+        <mat-option [value]="'income'">Income</mat-option>
       </mat-select>
     </mat-form-field>
 
