--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -8,6 +8,7 @@
     <mat-nav-list>
       <a mat-list-item [routerLink]="['dashboard']" (click)="left.close()">Dashboard</a>
       <a mat-list-item [routerLink]="['flow-chart']" (click)="left.close()">Flow chart</a>
+      <a mat-list-item [routerLink]="['category-chart']" (click)="left.close()">Category chart</a>
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['account']" (click)="left.close()">Account</a>
       <a mat-list-item [routerLink]="['expense']" (click)="left.close()">Expense</a>
