--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
@@ -37,7 +37,7 @@
 }
 
 .mat-list-item {
-  height: auto;
+  height: 4em;
 }
 
 .line {
@@ -64,4 +64,3 @@
   color: red;
   justify-self: center;
 }
-
