--- a/web/src/app/common/component/date-label/date-label.component.scss
+++ b/web/src/app/common/component/date-label/date-label.component.scss
@@ -7,6 +7,8 @@
   height: 38px;
   background-color: #ebf0f3;
   border-radius: 4px;
+  cursor: default;
+  user-select: none;
 }
 
 .day {
@@ -27,4 +29,8 @@
   font-size: 6px;
   border-radius: 0 0 4px 4px;
   line-height: 8px;
+}
+
+:host.disabled {
+  filter: grayscale(1);
 }
