--- a/web/src/app/document/component/document-label/document-label.component.html
+++ b/web/src/app/document/component/document-label/document-label.component.html
@@ -2,7 +2,7 @@
      [class.expense]="documentExpense"
      [class.income]="documentIncome"
      [class.exchange]="documentExchange"></div>
-<date-label *ngIf="!hideDate" [date]="document.value.date"></date-label>
+<date-label *ngIf="!hideDate" [date]="document.value.date" [disabled]="disabled"></date-label>
 
 <ng-container *ngIf="documentExpense">
   <div class="vertical">
@@ -34,31 +34,4 @@
     </div>
   </div>
 
-<!--  -->
-<!--  -->
-<!--  <ng-container *ngSwitchCase="">-->
-<!--    <div>amount same</div>-->
-<!--  </ng-container>-->
-
-<!--  <ng-container *ngSwitchCase="documentExchange.accountFrom == documentExchange.accountTo">-->
-<!--    <div>account same</div>-->
-<!--  </ng-container>-->
-
-<!--  <ng-container *ngSwitchDefault>-->
-<!--    <div>Other</div>-->
-<!--  </ng-container>-->
 </ng-container>
-
-
-
-
-
-<!--  <div class="multiline">-->
-<!--    <amount-label [amount]="documentExchange.amountFrom"></amount-label>-->
-<!--    <amount-label [amount]="documentExchange.amountTo" *ngIf="documentExchange.amountFrom.value != documentExchange.amountTo.value"></amount-label>-->
-<!--  </div>-->
-<!--  <div class="multiline">-->
-<!--    <span>{{documentExchange.accountFromName}}</span>-->
-<!--    <span *ngIf="documentExchange.accountFromName != documentExchange.accountToName">{{documentExchange.accountToName}}</span>-->
-<!--  </div>-->
-<!--</ng-container>-->
